try ot fix pictures on firefox

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -20,8 +20,9 @@ a:HOVER {
 img {
 	float:right;
 	max-height:200px;
-	max-width:100px;
+	/*max-width:100px;*/
 	margin:10px;
+	width:100px;
 }
 
 ul{
